--- a/src/css/style.css
+++ b/src/css/style.css
@@ -372,7 +372,29 @@ img {
 
 /* Subscribe */
 
+.subscribe {
+  position: relative;
+}
+
+.subscribe::before {
+  position: absolute;
+  content: '';
+  top: 114px;
+  left: calc(50% - 1px);
+  background-color: #5da8ef;
+  width: 2px;
+  height: 100px;
+}
+
+.subscribe .container {
+  width: 590px;
+  padding-top: 260px;
+  padding-bottom: 148px;
+}
+
 .subscribe__title {
+  margin-bottom: 13px;
+
   text-align: center;
   font-family: 'Playfair Display', serif;
   font-size: 42px;
@@ -382,10 +404,35 @@ img {
 }
 
 .subscribe__desc {
+  margin-bottom: 33px;
+
   font-family: 'Poppins', sans-serif;
   line-height: 24px;
   letter-spacing: 0.35px;
   color: #616161;
+
+  text-align: center;
+}
+
+.form__group {
+  display: flex;
+  justify-content: space-between;
+}
+
+.form__input {
+  width: 100%;
+  height: 50px;
+  padding-left: 30px;
+  padding-right: 30px;
+  background-color: #f5f5f5;
+
+  border: none;
+}
+
+.btn--submit {
+  min-width: 50px;
+  height: 50px;
+  background-color: #5da8ef;
 }
 
 /* Camp */
