--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,34 +1,14 @@
 /* Шрифты */
-/*
 @font-face {
-  font-family: 'Geometria';
-  src: local('Geometria Regular'), local('Geometria-Regular'),
-    url('../fonts/Geometria-Regular.woff') format('woff'),
-    url('../fonts/Geometria-Regular.woff2') format('woff2');
-  font-weight: 400;
-  font-display: swap;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Geometria';
-  src: local('Geometria Medium'), local('Geometria-Medium'),
-    url('../fonts/Geometria-Medium.woff') format('woff'),
-    url('../fonts/Geometria-Medium.woff2') format('woff2');
-  font-weight: 500;
-  font-display: swap;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Geometria';
-  src: local('Geometria Bold'), local('Geometria-Bold'),
-    url('../fonts/Geometria-Bold.woff') format('woff'),
-    url('../fonts/Geometria-Bold.woff2') format('woff2');
+  font-family: 'League Spartan';
+  src: local('League Spartan Bold'),
+  local('LeagueSpartan-Bold'), local('LeagueSpartan Bold'),
+    url('../fonts/Leaguespartanbold.woff2') format('woff2'),
+    url('../fonts/Leaguespartanbold.woff') format('woff');
   font-weight: 700;
   font-display: swap;
   font-style: normal;
-}*/
+}
 
 /* font-family: 'Fira Sans', sans-serif; */
 /* font-family: 'Poppins', sans-serif; */
@@ -123,7 +103,7 @@ img {
   font-family: 'League Spartan', 'Arial', sans-serif;
   text-transform: uppercase;
   font-size: 9px;
-  font-weight: 600;
+  font-weight: 700;
   color: #333333;
   letter-spacing: 5.4px;
 }
@@ -132,7 +112,7 @@ img {
   font-family: 'League Spartan', 'Arial', sans-serif;
   text-transform: uppercase;
   font-size: 9px;
-  font-weight: 600;
+  font-weight: 700;
   color: #333333;
   letter-spacing: 5.4px;
 }
@@ -185,13 +165,13 @@ img {
   font-family: 'League Spartan', 'Arial', sans-serif;
   text-transform: uppercase;
   font-size: 9px;
-  font-weight: 700;
   color: #0b0c11;
   letter-spacing: 5.58px;
 }
 
 .main-menu__item a {
   opacity: 0.9;
+  font-weight: 700;
 }
 
 .site-name {
@@ -311,8 +291,8 @@ img {
 
 .social {
   position: absolute;
-  bottom: 0;
-  right: -55px;
+  bottom: 300px;
+  right: 85px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -444,7 +424,7 @@ img {
 
   font-family: 'League Spartan', 'Arial', sans-serif;
   font-size: 9px;
-  font-weight: 600;
+  font-weight: 700;
   text-transform: uppercase;
   color: #5da8ef;
   letter-spacing: 5.4px;
@@ -515,12 +495,53 @@ img {
 
 /* ARTICLES */
 
+.article__preview {
+  position: relative;
+  z-index: 0;
+}
+
 .article__title {
+  position: relative;
+
   font-family: 'Playfair Display', serif;
   font-size: 42px;
   font-weight: 700;
   color: #333333;
   letter-spacing: 0.42px;
+
+  z-index: 2;
+}
+
+.article__title::before {
+  position: absolute;
+  content: '';
+  left: 0;
+  bottom: 0;
+  width: 23px;
+  height: 2px;
+  background-color: #5da8ef;
+}
+
+.article__title::after {
+  position: absolute;
+  content: '01';
+  left: 0;
+  bottom: 0;
+
+  font-family: 'League Spartan', 'Arial', sans-serif;
+  font-size: 130px;
+  font-weight: 700;
+  text-transform: uppercase;
+  line-height: 1;
+  /*color: #f9f9f9;*/
+  color: #ebebeb;
+  letter-spacing: 5.4px;
+
+  z-index: 1;
+}
+
+.article__img {
+  position: relative;
 }
 
 .article__text {
@@ -620,7 +641,7 @@ img {
 
   font-family: 'League Spartan', 'Arial', sans-serif;
   font-size: 9px;
-  font-weight: 620;
+  font-weight: 700;
   text-transform: uppercase;
   color: #0b0c11;
   letter-spacing: 5.58px;
@@ -659,6 +680,7 @@ img {
 
 .footer .logo {
   margin-bottom: 37px;
+  margin-right: 0;
 }
 
 .footer .foo-nav {
