--- a/src/css/style.css
+++ b/src/css/style.css
@@ -178,7 +178,7 @@ img {
   position: absolute;
   content: '';
   top: 168px;
-  right: -180px;;
+  right: -160px;;
 
   font-family: 'League Spartan', 'Arial', sans-serif;
   text-transform: uppercase;
@@ -192,6 +192,10 @@ img {
 }
 
 /* Promo Slider */
+
+.promo {
+  position: relative;
+}
 
 .promo__slider {
   position: relative;
@@ -291,8 +295,8 @@ img {
 
 .social {
   position: absolute;
-  bottom: 300px;
-  right: 85px;
+  bottom: 0;
+  right: -46px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
